--- a/angular.json
+++ b/angular.json
@@ -20,14 +20,17 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+           "assets": [
+            {
+              "glob": "**/*",
+              "input": "public",
+              "output": "/"
+            },
+            "src/favicon.ico",
+            "src/assets"
+          ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -85,12 +88,15 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "632845d6-715d-4d90-8ee5-50d886cc264e"
   }
 }
